pirtailly split quests and scripts